Cambios en formato y archivos
Se cambia el formato del Footer y se corrigen dimensiones del Logo, adem[as se elimina un archivo de video de mas de 8 mb

--- a/educacion.html
+++ b/educacion.html
@@ -16,7 +16,7 @@
             <image xlink:href="img/logoavc.svg" width="150" height="150"></image>
         </svg>
         <!-- Título -->
-        <h1>Curriculum</h1>
+        <h1>Curriculum Vitae</h1>
         <!-- Datos Personales -->
         <h2>Adolfo E. Vela</h2>
         <h3>1 de mayo 1985, México</h3>
@@ -106,11 +106,11 @@
     <hr>
     <footer>
         <ul>
-            <li>Email:
+            <li><strong>Email:</strong>
                 <a href="mailto:avc@hotmail.com">avc@hotmail.com</a>
             </li>
-            <li>Tel: 55-4312-123</li>
-            <li>Mexico CP.11456</li>
+            <li> <strong>Tel:</strong> 55-4312-123</li> 
+            <li><strong> Dirección:</strong> Mexico CP.11456 </li>
         </ul>
     </footer>
 </body>
