--- a/experiencia.html
+++ b/experiencia.html
@@ -13,7 +13,7 @@
     <header>
         <!-- Logo -->
         <svg>
-            <image xlink:href="img/logoavc.svg" width="100" height="100"></image>
+            <image xlink:href="img/logoavc.svg" width="150" height="150"></image>
         </svg>
 
         <!-- Título -->
@@ -56,11 +56,14 @@
     <hr>
     <footer>
         <ul>
-            <li>Email:
+            <li>
+                <strong>Email:</strong>
                 <a href="mailto:avc@hotmail.com">avc@hotmail.com</a>
             </li>
-            <li>Tel: 55-4312-123</li>
-            <li>Mexico CP.11456</li>
+            <li>
+                <strong>Tel:</strong> 55-4312-123</li>
+            <li>
+                <strong> Dirección:</strong> Mexico CP.11456 </li>
         </ul>
     </footer>
 </body>
